--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <section class="main-content">
             <article class="text">
             <h2>  Sobre mim</h2>  
-             <p>Me chamo Ricardo, tenho 20 anos, estou estudando para me tornar Desenvolvedor Front-end em constante aprendizado, com paixão por criar interfaces intuitivas e experiências do usuário memoráveis. Possuo experiência em HTML, CSS e JavaScript, e tenho me aprofundado em React para desenvolver aplicações web dinâmicas e escaláveis.  </p>
+             <p>Me chamo Ricardo, tenho 20 anos, estou cursando ADS e estudando para me tornar Desenvolvedor Front-end, com paixão por criar interfaces intuitivas e experiências do usuário memoráveis. Possuo experiência em HTML, CSS e JavaScript, e tenho me aprofundado em React para desenvolver aplicações web dinâmicas e escaláveis.  </p>
             </article>
 
             <aside class="techs">
